$Id: Changelog.txt,v 1.198 2010/09/21 15:31:02 nanard Exp $

2010/09/21:
  Patch to support nfqueue thanks to Colin McFarlane

2010/08/07:
  Update Mac OS X / ipfw stuff from Jardel Weyrich
  Fix in Makefile.linux for x86_64

2010/05/06:
  Bugfix un CleanNATPMPRules() : see http://miniupnp.tuxfamily.org/forum/viewtopic.php?t=640

2010/03/14:
  Fixing natpmp sockets.

2010/03/08:
  Fix Makefile.linux to compile properly under Mandriva/rh/Fedora with
    Iptables >= 1.4.3
  Workaround for bad uptime when started with a bad time set.

2010/03/07:
  Tried to make a OpenBSD version 4.7 compatible code... still some
  issues.

2010/03/06:
  updates to testobsdrdr

2010/03/03:
  -lip4tc in Makefile.linux.

2010/02/15:
  some more error handling in set_startup_time()
  silencing some warnings

2010/01/14:
  Open Several sockets for NAT-PMP to make sure the source address
  of NAT-PMP replies is right.
  see http://miniupnp.tuxfamily.org/forum/viewtopic.php?t=609

2009/12/31:
  miniupnpdctl now output command line arguments.
  added a -h option to get help. improved help.

2009/12/22:
  using PRIu64 format to printf u_int64_t
  Fixing calls to get_redirect_rule_by_index() : ifname should be initialized.
  Add header lines to miniupnpdctl output

2009/11/06:
  implementing sending of ip address change notification when receiving
    the signal SIGUSR1

VERSION 1.4 : released the 2009/10/30

2009/10/10:
  Integrate IPfilter patch from Roy Marples.
  Fix Netfilter code for old netfilter :
    see http://miniupnp.tuxfamily.org/forum/viewtopic.php?t=584
  trim the description string in reload_from_lease_file()

2009/09/21:
  Fixing unclosed raw sockets bug with netfilter code.

2009/09/04:
  Fixes in ipf code thanks to Roy Marples
  Enable DragonFly BSD Support thanks to Roy Marples.
  Allow packager to define default location of config file via CFLAGS
  Respect $DESTDIR when installing

2009/08/20:
  Adding some support for MacOS X and IPFW